chore: remove unnecessary comments

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
 
         <header class="todo-app-header">
-            <h2 class="todo-app-title">Todo App</h2>
+            <h2 class="todo-app-title">Todo List</h2>
             <section class="text-input-task-container">
                 <input type="text" class="text-input-task" id="text-input-task" placeholder="Add task...">
                 <button class="btn-add-task" id="btn-add-task">
@@ -55,12 +55,5 @@
 
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script src="js/main.js" defer></script>
-    <script>
-        // lucide.createIcons();
-
-       
-
-    </script>
 </body>
-
 </html>
